[metadata]
name = pdfminer.six
description = PDF parser and analyzer
license = MIT/X
author = Yusuke Shinyama + Philippe Guglielmetti
email = pdfminer@goulu.net
url = https://github.com/pdfminer/pdfminer.six
keywords = pdf parser, pdf converter, layout analysis, text mining
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Topic :: Text Processing

[options]
zip_safe = True
include_package_data = True
packages = pdfminer

[build-system]
requires = ["setuptools", "wheel"]
